<resources>
    <string name="app_name">二师信息采集</string>
    <string name="news">新闻聚焦</string>
    <string name="notices">通知公告</string>
    <string name="media">媒体二师</string>
    <string name="study">理论学习</string>
    <string name="logo">logo</string>
    <string name="version">版权所有©Chsengni</string>
    <string name="next">下一页</string>
    <string name="pre">上一页</string>
    <string name="current_page">1</string>
    <string name="xie">/</string>
    <string name="last_page">1</string>
</resources>
