<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_margin="20dp"
            android:contentDescription="@string/logo"
            android:src="@drawable/logo" />
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:gravity="top"
            android:layout_gravity="top"
            android:layout_height="wrap_content">

            <Button
                android:gravity="bottom|center"

                android:id="@+id/news"
                style="@style/btn_news"
                android:layout_width="0dp"
                android:layout_height="130dp"
                android:layout_weight="1.5"
                android:text="@string/news"
                android:textSize="15sp" />

            <Button
                android:gravity="bottom|center"

                android:id="@+id/notices"
                style="@style/btn_notices"
                android:layout_width="0dp"
                android:layout_height="130dp"
                android:layout_weight="1"
                android:text="@string/notices"
                android:textSize="15sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:gravity="bottom|center"

                android:id="@+id/media"
                style="@style/btn_media"
                android:layout_width="0dp"
                android:layout_height="130dp"
                android:layout_weight="1"
                android:text="@string/media"
                android:textSize="15sp" />

            <Button
                android:gravity="bottom|center"

                android:id="@+id/study"
                style="@style/btn_study"
                android:layout_width="0dp"
                android:layout_height="130dp"
                android:layout_weight="1.5"
                android:text="@string/study"
                android:textSize="15sp" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:gravity="center|bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_marginBottom="10dp"
            android:text="@string/version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>